src/components/Pages/Maps/FiltersSection/FilterGroup/LegendLabel/LegendLabel.module.scss
@use "@/styles/mixins" as m;

.label {
  min-width: 64px;
  text-wrap: nowrap;
  color: #fff;
  font-size: .9rem;
  font-weight: 600;
  text-transform: capitalize;
  display: flex;
  align-items: center;
  gap: 4px;
}

.label .tooltip {
  cursor: help;
  position: relative;
  top: 3px;
}

.label .tooltip .icon {
  width: 14px;
  height: 14px;
  background-color: rgba(255, 255, 255, .1);
  color: #9ca3af;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  font-size: .8em;
}

.label .tooltip .icon>svg {
  fill: currentColor;
  width: 100%;
  height: 100%;
}

.label .tooltip .tooltipText {
  width: max-content;
  height: fit-content;
  background-color: #1f2937;
  color: #f3f4f6;
  text-align: center;
  border-radius: 6px;
  padding: 8px 12px;
  position: absolute;
  z-index: 10;
  bottom: 140%;
  left: 50%;
  margin-left: -110px;
  font-size: .75rem;
  font-weight: 400;
  box-shadow: 0 4px 16px 0px rgba(0, 0, 0, .35);
  pointer-events: none;
  translate: 5px 0;
  border: 1px solid #374151;
  visibility: hidden;
  opacity: 0;
  transition:
    opacity .2s cubic-bezier(0.4, 0, 0.2, 1),
    transform .2s ease;
}

.label .tooltip:hover .tooltipText {
  visibility: visible;
  opacity: 1;
}

@include m.media(small) {
  .label .tooltip .tooltipText {
    top: auto;
    left: 50%;
    margin-left: -70px;
  }
}

@include m.media(very-small) {
  .label .tooltip .tooltipText {
    top: auto;
    left: 0;
    translate: 0 0;
    margin-left: -70px;
    width: 190px;
  }
}

@include m.media(small) {
  .label[data-label="Map Type"] .tooltip .tooltipText {
    margin-left: -90px;
  }
}

@include m.media(very-small) {
  .label[data-label="Map Type"] .tooltip .tooltipText {
    margin-left: -84px;
  }

  .label[data-label=Rating] .tooltip .tooltipText {
    margin-left: -62px;
  }
}

